[CMakeLists] set correctly QT PATH for WIndows platforom

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,19 +2,11 @@ cmake_minimum_required(VERSION 2.8.11)
 
 project(MidiEditor)
 
-# Find includes in the build directories
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
-
-# Turn on automatic invocation of the MOC
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTORCC ON)
-
 if(WIN32)
+	set(QT5_DIR "C:/Qt/5.7/msvc2013_64/lib/cmake" CACHE STRING "Additional search paths for QT5")
 	if( CMAKE_CL_64 OR CMAKE_SIZEOF_VOID_P EQUAL 8 ) 
-		set(QT5_DIR "D:/dev/Qt/5.7/msvc2013_64/lib/cmake") 
 		SET(ARCH "x64")
 	else( CMAKE_CL_64 OR CMAKE_SIZEOF_VOID_P EQUAL 8 ) 
-		set(QT5_DIR "D:/dev/Qt/5.7/msvc2013/lib/cmake") 
 		SET(ARCH "x86")
 	endif( CMAKE_CL_64 OR CMAKE_SIZEOF_VOID_P EQUAL 8 )
 	find_path(Qt5Widgets_DIR Qt5WidgetsConfig.cmake PATHS "${QT5_DIR}/Qt5Widgets" )
@@ -22,12 +14,18 @@ if(WIN32)
 	find_path(Qt5Xml_DIR     Qt5XmlConfig.cmake     PATHS "${QT5_DIR}/Qt5Xml"     )
 	add_definitions(/W3)
 	add_definitions(-D__WINDOWS_MM__ -D_UNICODE)
-	MESSAGE("ARCH = ${ARCH}")
+	MESSAGE(STATUS "ARCH = ${ARCH}")
 endif()
 
 find_package(Qt5Widgets REQUIRED)
 find_package(Qt5Network REQUIRED)
 find_package(Qt5Xml REQUIRED)
+
+# Turn on automatic invocation of the MOC
+set(CMAKE_AUTOMOC ON)
+
+#add_definitions(${Qt5Core_DEFINITIONS})
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Core_EXECUTABLE_COMPILE_FLAGS}")
 
 file( GLOB main      src/*.cpp            )
 file( GLOB gui       src/gui/*.cpp        )
@@ -47,18 +45,20 @@ file( GLOB RTMidih    src/midi/rtmidi/*.h)
 file( GLOB Remoteh    src/remote/*.h     )
 file( GLOB Toolh      src/tool/*.h       )
 
-source_group( "main"        FILES ${main}      ${mainh}      )
-source_group( "gui"         FILES ${gui}       ${guih}       )
-source_group( "MidiEvent"   FILES ${MidiEvent} ${MidiEventh} )
-source_group( "protocol"    FILES ${Protocol}  ${Protocolh}  )
-source_group( "midi"        FILES ${Midi}      ${Midih}      )
-source_group( "midi/rtmidi" FILES ${RTMidi}    ${RTMidih}    )
-source_group( "remote"      FILES ${Remote}    ${Remoteh}    )
-source_group( "tool"        FILES ${Tool}      ${Toolh}      )
-
-add_definitions(${Qt5Core_DEFINITIONS})
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Core_EXECUTABLE_COMPILE_FLAGS}")
+source_group( "gui"            FILES ${gui}       )
+source_group( "gui\\inc"       FILES ${guih}      )
+source_group( "MidiEvent"      FILES ${MidiEvent} )
+source_group( "MidiEvent\\inc" FILES ${MidiEventh})
+source_group( "protocol"       FILES ${Protocol}  )
+source_group( "protocol\\inc"  FILES ${Protocolh} )
+source_group( "midi"           FILES ${Midi}      )
+source_group( "midi\\inc"      FILES ${Midih}     )
+source_group( "remote"         FILES ${Remote}    )
+source_group( "remote\\inc"    FILES ${Remoteh}   )
+source_group( "tool"           FILES ${Tool}      )
+source_group( "tool\\inc"      FILES ${Toolh}     )
+source_group( ""               FILES ${main} ${mainh} )
+source_group( "midi\\rtmidi"   FILES ${RTMidi} ${RTMidih} )
 
 add_executable(MidiEditor 
 	${main}      ${mainh}      
