Update CMakeList to make installer DEB

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,20 @@
 cmake_minimum_required(VERSION 2.8.11)
 
 project(MidiEditor)
-option(INSTALL_WITH_CPACK "Make deployment on Windows installer" OFF )
-option(NO_CONSOLE_MODE "Have a console to debuging" OFF)
+
+# check compiler
+if(MSVC12)
+	message(STATUS "Your compiler is managed")
+elseif(CMAKE_COMPILER_IS_GNUCXX)
+	message(STATUS "Your compiler is managed")
+else()
+	message(FATAL_ERROR "Your compiler is not managed by this CMakeLists. Only MSVC12 or GCC (G++) is managed")
+endif()
+
+option(INSTALL_WITH_CPACK "Make deployment on Windows installer or Linux DEB file" OFF )
 
 if(MSVC12)
+	option(NO_CONSOLE_MODE "Have a console to debuging" OFF)
 	if( CMAKE_CL_64 OR CMAKE_SIZEOF_VOID_P EQUAL 8 )
 		set(QT5_DIR "C:/Qt/5.7/msvc2013_64/lib/cmake" CACHE STRING "Additional search paths for QT5")
 		SET(ARCH "x64")
@@ -22,7 +32,7 @@ if(MSVC12)
 	endif()
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP") # multi processor compiliation.
 	MESSAGE(STATUS "ARCH = ${ARCH}")
-elseif(CMAKE_COMPILER_IS_GNUCXX)
+else
     add_definitions(-std=c++11)
 	add_definitions(-D__LINUX_ALSASEQ__)
 	add_definitions(-D__LINUX_ALSA__)
@@ -30,8 +40,6 @@ elseif(CMAKE_COMPILER_IS_GNUCXX)
 	find_path(Qt5Widgets_DIR Qt5WidgetsConfig.cmake PATHS "${QT5_DIR}/Qt5Widgets" )
 	find_path(Qt5Network_DIR Qt5NetworkConfig.cmake PATHS "${QT5_DIR}/Qt5Network" )
 	find_path(Qt5Xml_DIR     Qt5XmlConfig.cmake     PATHS "${QT5_DIR}/Qt5Xml"     )
-else()
-	message(FATAL_ERROR "Your compiler is not managed by this CMakeLists, only MSVC12 or G++ is managed")
 endif()
 
 find_package(Qt5Widgets REQUIRED)
@@ -88,7 +96,7 @@ add_executable(MidiEditor
 
 include(ressources.cmake)
 set(MidiEditorDep Qt5::Widgets Qt5::Network Qt5::Xml)
-if(MSVC)
+if(MSVC12)
 	target_link_libraries(MidiEditor Winmm.lib ${MidiEditorDep})
 	if(NO_CONSOLE_MODE)
 		set_target_properties(MidiEditor PROPERTIES  LINK_FLAGS "/SUBSYSTEM:WINDOWS")
@@ -114,18 +122,23 @@ file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/run_environment/metronome/metronome-01.wa
 if(INSTALL_WITH_CPACK)
 	install(TARGETS MidiEditor DESTINATION bin)
 	install(FILES "${CMAKE_CURRENT_BINARY_DIR}/ressources.rcc" DESTINATION bin)
-	install(FILES ${QT5_DLLs_DEP_RELEASE} DESTINATION bin)
 	install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/run_environment/metronome/metronome-01.wav" DESTINATION bin/metronome)
-	set(CPACK_GENERATOR NSIS)
+	if(WIN32)#Windows
+		install(FILES ${QT5_DLLs_DEP_RELEASE} DESTINATION bin)
+		set(CPACK_GENERATOR NSIS)
+		set(CPACK_PACKAGE_INSTALL_DIRECTORY "MidiEditor")
+		set(CPACK_PACKAGE_EXECUTABLES "MidiEditor" "MidiEditor" ${CPACK_PACKAGE_EXECUTABLES}) 
+		set(CPACK_NSIS_MODIFY_PATH OFF)
+	else #UNIX
+		set(CPACK_GENERATOR "DEB")
+		SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Amaury Bréhéret") #required
+	endif()
 	set(CPACK_PACKAGE_NAME "MidiEditor")
-	set(CPACK_PACKAGE_VENDOR "http://midieditor.sourceforge.net/")
+	set(CPACK_PACKAGE_VENDOR "https://github.com/abreheret/MidiEditor")
 	set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "MidiEditor - Installation ")
 	set(CPACK_PACKAGE_VERSION "3.1.1")
 	set(CPACK_PACKAGE_VERSION_MAJOR "3")
 	set(CPACK_PACKAGE_VERSION_MINOR "1")
 	set(CPACK_PACKAGE_VERSION_PATCH "1")
-	set(CPACK_PACKAGE_EXECUTABLES "MidiEditor" "MidiEditor" ${CPACK_PACKAGE_EXECUTABLES}) 
-	set(CPACK_PACKAGE_INSTALL_DIRECTORY "MidiEditor")
-	SET(CPACK_NSIS_MODIFY_PATH OFF)
 	INCLUDE(CPack)
 endif()
