update cmake for linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,6 @@ if(MSVC12)
 	if( CMAKE_CL_64 OR CMAKE_SIZEOF_VOID_P EQUAL 8 )
 		set(QT5_DIR "C:/Qt/5.7/msvc2013_64/lib/cmake" CACHE STRING "Additional search paths for QT5")
 		SET(ARCH "x64")
-		add_definitions(-D__ARCH64__)
 	else( CMAKE_CL_64 OR CMAKE_SIZEOF_VOID_P EQUAL 8 )
 		set(QT5_DIR "C:/Qt/5.7/msvc2013/lib/cmake" CACHE STRING "Additional search paths for QT5")
 		SET(ARCH "x86")
@@ -47,6 +46,10 @@ else()
 	find_path(Qt5Widgets_DIR Qt5WidgetsConfig.cmake PATHS "${QT5_DIR}/Qt5Widgets" )
 	find_path(Qt5Network_DIR Qt5NetworkConfig.cmake PATHS "${QT5_DIR}/Qt5Network" )
 	find_path(Qt5Xml_DIR     Qt5XmlConfig.cmake     PATHS "${QT5_DIR}/Qt5Xml"     )
+endif()
+
+if(ARCH STREQUAL "x64" ) 
+	add_definitions(-D__ARCH64__)
 endif()
 
 find_package(Qt5Widgets REQUIRED)
@@ -139,8 +142,13 @@ if(INSTALL_WITH_CPACK)
 		set(CPACK_NSIS_MODIFY_PATH OFF)
 	else() #UNIX
 		set(CPACK_GENERATOR "DEB")
-		SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Amaury Bréhéret") #required
+		SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Amaury Bréhéret")
+		set (CPACK_DEBIAN_PACKAGE_DEPENDS "libqt5widgets5:amd64 (>=5.7), libqt5network5:amd64 (>=5.7), libqt5xml:amd64 (>=5.7), libsfml-system,libsfml-audio,libasound,libpthread")
+		#set(CPACK_DEBIAN_PACKAGE_DEPENDS "qt5-default (>= 5.7),libsfml-system,libsfml-audio,libasound,libpthread") 
+		#set(CPACK_DEBIAN_PACKAGE_DEPENDS "libQt5Widgets,libQt5Network,libQt5Xml,libQt5Core,libsfml-system,libsfml-audio,libasound,libpthread")
+		set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
 	endif()
+	set(CPACK_PACKAGE_CONTACT "Amaury Bréhéret abreheret@gmail.com")
 	set(CPACK_PACKAGE_NAME "MidiEditor")
 	set(CPACK_PACKAGE_VENDOR "https://github.com/abreheret/MidiEditor")
 	set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "MidiEditor - Installation ")
